--- a/.github/workflows/First-example.yml
+++ b/.github/workflows/First-example.yml
@@ -5,12 +5,12 @@ on: push
 jobs:
     first_job : 
      runs-on: ubuntu-latest
-      steps:
-         - name: Welcome message
-          run: echo "first github action jobs"
+     steps:
+      - name: welcome message
+        run: echo "first github action jobs"
 
-         - name: List files
-           run: ls 
+      - name: List files
+        run: ls 
 
-         - name: read file
-          run: cat README.cd
+      - name: read file
+        run: cat README.cd
