shell script without permission

--- a/.github/workflows/generate-cowsay.yml
+++ b/.github/workflows/generate-cowsay.yml
@@ -13,10 +13,9 @@ jobs:
         run: ls -ltra
 
       - name: executing shell script
-        run: chmod -x ascii-script.sh
-             ./ascii-script.sh
+        run: ./ascii-script.sh
 
-
+#chmod -x ascii-script.sh
 
 
      
