--- a/.github/workflows/generate-cowsay.yml
+++ b/.github/workflows/generate-cowsay.yml
@@ -13,9 +13,10 @@ jobs:
         run: ls -ltra
 
       - name: executing shell script
-        run: ./ascii-script.sh
+        run: chmod -x ascii-script.sh 
+             ./ascii-script.sh
 
-#chmod -x ascii-script.sh
+#
 
 
      
