--- a/.github/workflows/generate-cowsay.yml
+++ b/.github/workflows/generate-cowsay.yml
@@ -13,7 +13,7 @@ jobs:
         run: ls -ltra
 
       - name: executing shell script
-        run: chmod -x ascii-script.sh 
+        run: chmod +x ascii-script.sh 
              ./ascii-script.sh
 
 #
