--- a/.github/workflows/generate-cowsay.yml
+++ b/.github/workflows/generate-cowsay.yml
@@ -12,11 +12,11 @@ jobs:
       - name: list repo files
         run: ls -ltra
 
-      - name: executing shell script
-        run: chmod +x ascii-script.sh 
-             ./ascii-script.sh
+#       - name: executing shell script
+#         run: chmod +x ascii-script.sh 
+#              ./ascii-script.sh
 
-#
+# #
 
 
      
