--- a/.github/workflows/variables-secrets.yml
+++ b/.github/workflows/variables-secrets.yml
@@ -1,8 +1,8 @@
 name: Exploring Variables and Secrets
 
 on:
-  workflow_dispatch: 
-  # push:
+  # workflow_dispatch: 
+   push:
 
 env:
     CONTAINER_REGISTRY: docker.io
@@ -29,6 +29,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Docker Run
+      timeout-minutes: 1
       run: |
         echo docker run -d -p 8080:80 $CONTAINER_REGISTRY/${{vars.DOCKER_USERNAME}}/$IMAGE_NAME:latest
-        sleep 60s 
+        sleep 120s 
